[package]
name = "i3-back"
version = "0.3.0"
edition = "2021"
description = "An i3/Sway utility to switch focus to your last focused window. Allows for behavior similar to Alt+Tab on other desktop environments."
repository = "https://github.com/Cretezy/i3-back"
homepage = "https://github.com/Cretezy/i3-back"
license = "MIT"
keywords = ["i3", "sway"]
authors = ["Charles Crete <charles@cretezy.com>"]

[dependencies]
i3ipc = { version = "0.10.1", features = ["i3-4-14"] }
